Fix spacing to css code

--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: Ubuntu;
-
+  font: normal 100%/1.3 Ubuntu, sans-serif;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -71,6 +70,7 @@ nav a:hover {
     display: block;
     text-align: center;
   }
+
 }
 
 @media only screen and (min-width: 38em) {
@@ -85,6 +85,7 @@ nav a:hover {
     display: block;
     text-align: center;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -94,27 +95,29 @@ nav a:hover {
     line-height: 1.5;
   }
 
-  header h1 {
+  header {
     text-align: left;
+    display: flex;
   }
 
   li {
     width: 25%;
     text-align: center;
-    display: inline-block;
+    display: flex;
   }
+
 }
 
 @media only screen and (min-width: 90em) {
+
   html {
     font-size: 130%;
   }
 
+  li {
+    width: 25%;
+    align-items: center;
+    justify-content: flex-end;
+  }
 
-    li {
-      width: 25%;
-      align-items: center;
-      justify-content: flex-end;
-      display: block;
-    }
 }
